# webex-meetings-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: 2026-03-02-webex-meetings-cli-phase1-1-design.md  2026-03-02-webex-meetings-cli-phase1-implementation-spec.md  2026-03-02-webex-meetings-cli-phase1.md  2026-03-02-webex-meetings-cli-roadmap.md  2026-03-03-code-review.md  2026-03-03-implementation-commit-strategy.md  2026-03-04-phase-1-1-contract-addendum.md  2026-03-04-phase-1-1-release-checklist.md  2026-03-04-phase-1-1-release-policy.md  2026-03-04-phase-1-1-resumable-download-decision.md  2026-03-04-phase-1-1-schema-exception-workflow.md  2026-03-05-phase-2x-contract-addendum.md  2026-03-05-phase-2x-host-operator-guide.md  2026-03-05-phase-2x-press-release.md  2026-03-05-phase-2x-release-checklist.md  2026-03-05-phase-2x-rollback-drill.md  2026-03-05-phase-2x-technical-release.md
docs/plans/: 2026-03-04-phase-1-1-implementation-plan.md  2026-03-05-phase-2x-implementation-plan.md  plan-readiness-checklist.md
tests/: conftest.py
tests/contracts/: test_contract_envelopes.py  test_error_code_contracts.py  test_exit_code_matrix.py
tests/e2e/: test_cli_smoke.py
tests/integration/: test_client_integration.py  test_phase_1_1_cli_integration.py
tests/unit/: test_auth_flow.py  test_capabilities.py  test_cli_version.py  test_client_oauth_refresh.py  test_common_base_url.py  (+21 more)
webex_cli/: __init__.py  __main__.py  capabilities.py  cli.py  host_utils.py  mutations.py  oauth.py  runtime.py  transcript_index.py  version.py
(+42 files in other folders)
