[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webex-meetings-cli"
version = "0.1.0"
description = "Webex meetings artifact CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
]

[project.scripts]
webex = "webex_cli.cli:app"

[tool.setuptools.packages.find]
include = ["webex_cli*"]

